--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-register": "^6.4.3",
     "express": "^4.13.3",
+    "http": "0.0.0",
     "isomorphic-fetch": "^2.2.1",
     "qs": "^4.0.0",
     "react": "^0.14.7",
@@ -26,7 +27,9 @@
     "redux": "^3.2.1",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^1.0.3",
-    "serve-static": "^1.10.0"
+    "serve-static": "^1.10.0",
+    "socketio": "^1.0.0",
+    "twitter": "^1.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
